add camera implementation

--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,4 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=F:/Android/adt-bundle-windows-x86_64-20130917/OpenCV-2.4.6-android-sdk/sdk/java
-android.library.reference.2=../../../Documents/OpenCV/OpenCV-2.4.6-android-sdk/sdk/java
-android.library.reference.3=../../../../Documents/OpenCV/OpenCV-2.4.6-android-sdk/sdk/java
+android.library.reference.1=../OpenCV-2.4.6-android-sdk/sdk/java
